--- a/lifecycle-data/products/microsoft-sql-server-2008.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2008.yml
@@ -2,19 +2,19 @@
 metadata:
   title: Microsoft SQL Server 2008
   description: Microsoft SQL Server 2008 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 8dd6dece999e9bea86eb5b4172ae47f925fa2772
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 08/03/2020
+  ms.openlocfilehash: 15d47cb19d68d2ebb70659d43f7341eba2db1663
+  ms.sourcegitcommit: ea5579a833360652f47792f68134e2b25be4d487
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812352"
+  ms.lasthandoff: 08/04/2020
+  ms.locfileid: "882210"
 name: Microsoft SQL Server 2008
 summary: >
   Microsoft SQL Server 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit geldt voor de volgende edities: Developer, Enterprise, Express, Express with Advanced Services, Standard, Standard Edition for Small Business, Web, Workgroup
+  Dit geldt voor de volgende edities: Datacenter, Developer, Enterprise, Express, Express with Advanced Services, Standard, Standard Edition for Small Business, Web, Workgroup
 
 
   > [!IMPORTANT]
@@ -43,4 +43,4 @@ releases:
 - version: Original Release
   startDate: 11/06/2008
   endDate: 04/13/2010
-content: "> [!TIP]\n> Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar voor de datacenter-, standaard-, ondernemings-, web- en werkgroep- en embedded-edities van dit product, voor maximaal drie jaar na het einde van de ondersteuning.\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Uitgebreid beveiligingsupdateprogramma (ESU)](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services Blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n* [Migratiebegeleiding](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 7/9/2019.\n\n## <a name=\"editions\"></a>Edities \n* Ontwikkelaar\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standaard\n* Standard Edition voor kleine bedrijven\n* Web\n* Werkgroep"
+content: "> [!TIP]\n> Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar voor de datacenter-, standaard-, ondernemings-, web- en werkgroepedities van dit product, voor maximaal drie jaar na het einde van de ondersteuning.\nRelease-------------------------------Startdatum----Datum\n\nVerlengde beveiligingsupdate jaar 3---07/13/2021---07/12/2022\n\nVerlengde beveiligingsupdate jaar 2---07/14/2021---07/13/2021\n\nVerlengde beveiligingsupdate jaar 1---07/9/2019---07/14/2020\n\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Uitgebreid beveiligingsupdateprogramma (ESU)](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services Blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 7/9/2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Ontwikkelaar\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standaard\n* Standard Edition voor kleine bedrijven\n* Web\n* Werkgroep"
