--- a/lifecycle-data/products/biztalk-server-2010.yml
+++ b/lifecycle-data/products/biztalk-server-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: BizTalk Server 2010
-  description: BizTalk Server 2010 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 0e1ec4100c78330ba53becb9c910129cf0f2602c
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: BizTalk Server 2010 volgt het vaste levenscyclus beleid.
+  ms.date: 08/06/2020
+  ms.openlocfilehash: 95ff78ba6073c8bc72f1f20e188a98747e4acf75
+  ms.sourcegitcommit: 87091f3fdb147e1254e631d31a0f7baeda61a424
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812661"
+  ms.lasthandoff: 08/06/2020
+  ms.locfileid: "885105"
 name: BizTalk Server 2010
 summary: >+
-  BizTalk Server 2010 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  BizTalk Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, Standard
+  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, Enterprise RFID, Standard
 
 products:
 - microsoft-servers
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/14/2010
   endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/biztalk/install-and-config-guides/upgrade-to-biztalk-server-2020)\n* [Versiegegevens](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Ontwikkelaar\n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](/biztalk/install-and-config-guides/upgrade-to-biztalk-server-2020)\n* [Versiegegevens](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edition \n* Spelletjes\n* Schrijven\n* Enterprise\n* Enterprise RFID\n* Verre"
