--- a/lifecycle-data/products/microsoft-office-communications-server-2007-r2.yml
+++ b/lifecycle-data/products/microsoft-office-communications-server-2007-r2.yml
@@ -1,21 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Communications Server 2007 R2
-  description: Microsoft Office Communications Server 2007 R2 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 33d9d5fff1c61fcf44480c75e2a2f7ff3bd72fc9
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft Office Communications Server 2007 R2 volgt het vaste levenscyclus beleid.
+  ms.date: 08/07/2020
+  ms.openlocfilehash: 229bad5ba97248c738f950b7252cd9c69e238cf1
+  ms.sourcegitcommit: 41160e72cd21aa5bf1748336c3975d8ec9b9ac06
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812747"
+  ms.lasthandoff: 08/07/2020
+  ms.locfileid: "885824"
 name: Microsoft Office Communications Server 2007 R2
-summary: >+
-  Microsoft Office Communications Server 2007 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
-
-
-  Dit geldt voor de volgende edities: XMPP Gateway
-
+summary: "Microsoft Office Communications Server 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende versies: all applicable, Enterprise, XMPP Gateway\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. Zie migratie richtlijnen. \n"
 products:
 - office
 policyType: fixed
@@ -27,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 09/28/2009
   endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n> [!NOTE]\n> XMPP Gateway uitgebracht op 9/28/2009.\n\n## <a name=\"editions\"></a>Edities \n* XMPP-gateway"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n> [!NOTE]\n> XMPP Gateway uitgebracht op 9/28/2009.\n\n## <a name=\"editions\"></a>Edition \n* Allemaal van toepassing\n* Enterprise\n* XMPP Gateway"
