commit translated contents

--- a/lifecycle-data/products/dynamics-365-layout.yml
+++ b/lifecycle-data/products/dynamics-365-layout.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Indeling Dynamica 365
-  description: Dynamics 365 Layout volgt het beleid voor moderne levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: b3dff3d9a8e33fd57896f487fdf4e5702dd1dfd6
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  title: Dynamics 365-indeling
+  description: Dynamics 365-indeling met het moderne levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 1995274fb40f9ea278629e50c290def57f7f113d
+  ms.sourcegitcommit: 1974bfc9a9fccaac36daaa1015b7f31c8814ae07
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868691"
-name: Indeling Dynamica 365
+  ms.lasthandoff: 08/12/2020
+  ms.locfileid: "891837"
+name: Dynamics 365-indeling
 summary: >+
-  Dynamics 365 Layout volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Dynamics 365-indeling met het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 09/30/2018
   endDate: 12/31/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Indeling en assist op afstand](/dynamics365/mixed-reality/layout/faq)"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Layout en hulp op afstand](/dynamics365/mixed-reality/layout/faq)\n* [De overgang van de Dynamics 365-indeling aangekondigd](https://dynamics.microsoft.com/mixed-reality/layout-transition/)"
