--- a/lifecycle-data/products/cloud-platform-system.yml
+++ b/lifecycle-data/products/cloud-platform-system.yml
@@ -1,18 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Cloud platform systeem
-  description: Cloud Platform System volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 931caf3fc06338dfa6ec97f0a7bc079c9be6a4a9
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  title: Cloud platform System
+  description: Het beleid van de Cloud platform volgt het vaste levens Duurbeleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 132fd3832cd1d0927fe7ce6af7eb8e0a21e8d308
+  ms.sourcegitcommit: 1974bfc9a9fccaac36daaa1015b7f31c8814ae07
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851929"
-name: Cloud platform systeem
+  ms.lasthandoff: 08/12/2020
+  ms.locfileid: "891874"
+name: Cloud platform System
 summary: >+
-  Cloud Platform System volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Het beleid van de Cloud platform volgt het [vaste](/lifecycle/policies/fixed) levens duurbeleid.
 
+
+  Dit geldt voor de volgende edities: standaard
 
 products:
 - azure
@@ -25,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/29/2015
   endDate: 07/12/2022
-content: "\n\n> [!NOTE]\n> Ondersteuning voor Cloud Platform System wordt uitgebreid zoals getoond om alle klanten te voorzien van de standaard levenscyclusovergangstijdlijn.\n> [!NOTE]\n> Cloud Platform System Standard gelanceerd op 18 september 2017."
+content: "\n\n> [!NOTE]\n> Ondersteuning voor het Cloud platform System wordt uitgebreid, zoals weergegeven om alle klanten met de standaardlevenscyclus van de overgang te bieden.\n> [!NOTE]\n> Het Cloud platform System Standard is gestart op 18 september 2017.\n\n## <a name=\"editions\"></a>Edition \n* Verre"
