--- a/lifecycle-data/products/dynamics-sl-65.yml
+++ b/lifecycle-data/products/dynamics-sl-65.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics SL 6.5
-  description: Dynamics SL 6.5 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: ca483d6236e5fa0bc8fb3262e8d480bce52bb656
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Dynamics SL 6,5
+  description: Dynamics SL 6,5 volgt het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: cb726b8c90053c30c1a408fd0c7ba36da615f597
+  ms.sourcegitcommit: 1974bfc9a9fccaac36daaa1015b7f31c8814ae07
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812076"
-name: Dynamics SL 6.5
+  ms.lasthandoff: 08/12/2020
+  ms.locfileid: "891713"
+name: Dynamics SL 6,5
 summary: >+
-  Dynamics SL 6.5 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics SL 6,5 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
 products:
@@ -33,4 +33,4 @@ releases:
 - version: Original Relase
   startDate: 01/14/2006
   endDate: 07/10/2007
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)"
