--- a/lifecycle-data/products/expression.yml
+++ b/lifecycle-data/products/expression.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Expressie
-  description: Expressie volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: ee3c7cfc6f62fb00775e13137084c8e509ac5d8c
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  title: Mening
+  description: Expressie volgt het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: c81accb05bdbd957a699685c83074735956a009e
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "867360"
-name: Expressie
-summary: "Expressie volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Blend, Design, Encoder, Studio\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893382"
+name: Mening
+summary: "Expressie volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende edities: mengsel, ontwerp, encoder, Studio\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
 products:
 - expression
 policyType: fixed
@@ -22,4 +22,4 @@ releases:
 - version: Original Release
   startDate: 07/27/2007
   endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De begindatum voor Expressie Blend is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edities \n* Mix\n* Ontwerp\n* Encoder\n* Studio"
+content: "\n\n> [!NOTE]\n> De begindatum voor de overvloeiing van expressies is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edition \n* Blend\n* Vooraf\n* Huffman\n* Studio"
