--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-23.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-23.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk Accelerator voor SWIFT 2.3
-  description: Microsoft BizTalk Accelerator voor SWIFT 2.3 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: b4e8c14f0cc9d8a023d62d4c8ed6521eed1f40a4
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft BizTalk Accelerator voor SWIFT 2,3
+  description: Microsoft BizTalk Accelerator voor SWIFT 2,3 volgt het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 255f9cf85c3d65c0f2a538c76f9db4eb2489d6b0
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812448"
-name: Microsoft BizTalk Accelerator voor SWIFT 2.3
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893530"
+name: Microsoft BizTalk Accelerator voor SWIFT 2,3
 summary: >+
-  Microsoft BizTalk Accelerator voor SWIFT 2.3 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Accelerator voor SWIFT 2,3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
   Dit geldt voor de volgende edities: Enterprise, Standard
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 06/21/2006
   endDate: 10/14/2008
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edition \n* Enterprise\n* Verre"
