--- a/lifecycle-data/products/microsoft-biztalk-adapters-for-host-systems-20.yml
+++ b/lifecycle-data/products/microsoft-biztalk-adapters-for-host-systems-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk-adapters voor hostsystemen 2.0
-  description: Microsoft BizTalk-adapters voor hostsystemen 2.0 volgen het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: f80e0cf76eebd3d54f478080a80929cb15778886
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Microsoft BizTalk-adapters voor host Systems 2,0
+  description: Microsoft BizTalk-adapters voor host Systems 2,0 volgen het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 425db6cb5918efdf9afc544d8a0e8bb554ce695c
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812443"
-name: Microsoft BizTalk-adapters voor hostsystemen 2.0
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893493"
+name: Microsoft BizTalk-adapters voor host Systems 2,0
 summary: >+
-  Microsoft BizTalk-adapters voor hostsystemen 2.0 volgen het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk-adapters voor host Systems 2,0 volgen het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
   Dit geldt voor de volgende edities: Developer, Standard
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 06/21/2009
   endDate: 07/09/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/Host-Integration-Blog/End-of-Support-for-BizTalk-Adapters-for-Host-Systems-2-0/ba-p/269471)\n\n\n## <a name=\"editions\"></a>Edities \n* Ontwikkelaar\n* Standaard"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Host-Integration-Blog/End-of-Support-for-BizTalk-Adapters-for-Host-Systems-2-0/ba-p/269471)\n\n\n## <a name=\"editions\"></a>Edition \n* Schrijven\n* Verre"
