--- a/lifecycle-data/products/microsoft-biztalk-server-2004.yml
+++ b/lifecycle-data/products/microsoft-biztalk-server-2004.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft BizTalk Server 2004
-  description: Microsoft BizTalk Server 2004 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: e9cb9fea43232ed09c4dd276df75b919323fd5dc
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft BizTalk Server 2004 volgt het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 3601a186f2016a32ea40ef7bf59e484940d7d4b0
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812437"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893567"
 name: Microsoft BizTalk Server 2004
 summary: >+
-  Microsoft BizTalk Server 2004 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BizTalk Server 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Developer, Enterprise, Partner, Standard
+  Dit geldt voor de volgende edities: ontwikkelaar, Enterprise, partner, Standard
 
 products:
 - microsoft-servers
@@ -33,4 +33,4 @@ releases:
 - version: Original Release
   startDate: 05/20/2004
   endDate: 04/11/2006
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Ontwikkelaar\n* Enterprise\n* Partner\n* Standaard"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edition \n* Schrijven\n* Enterprise\n* Winkel\n* Verre"
