--- a/lifecycle-data/products/microsoft-office-2019-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2019-for-mac.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2019 voor Mac
-  description: Microsoft Office 2019 voor Mac volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: ee537a1a128351f1b720e245f9725a267dcd6df5
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  description: Microsoft Office 2019 voor Mac volgt het beleid voor de vaste levenscyclus.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: dae679faff1601ea2c617f4413d29e48299c750c
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868795"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "892568"
 name: Microsoft Office 2019 voor Mac
 summary: >+
-  Microsoft Office 2019 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2019 voor Mac volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit geldt voor de volgende edities: Academic, Home and Business, Home and Student, Standard
+  Dit geldt voor de volgende edities: onderwijs, thuis en zakelijk, thuis en leerling, standaard
 
 products:
 - office
@@ -26,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 09/24/2018
   endDate: 10/10/2023
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Academische\n* Thuis en zakelijk\n* Thuis en student\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edition \n* Academic\n* Thuis en op het werk\n* Voor Thuisgebruik en studenten\n* Verre"
