--- a/lifecycle-data/products/sql-server-2016.yml
+++ b/lifecycle-data/products/sql-server-2016.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SQL Server 2016
-  description: SQL Server 2016 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 1b41e2eeed9a3b7fa2038070a84e468866dd633c
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: SQL Server 2016 volgt het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: e54ceed1e30fb7075b341e068c5d65d7c9e95858
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851904"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "892753"
 name: SQL Server 2016
 summary: >+
-  SQL Server 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  SQL Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Developer, Enterprise, Enterprise Core, Express, Standard, Web
+  Dit geldt voor de volgende edities: ontwikkelaar, Enterprise, Enterprise core, Express, Standard, Web
 
 products:
 - sql-server
@@ -33,4 +33,4 @@ releases:
 - version: Original Release
   startDate: 06/01/2016
   endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Ontwikkelaar\n* Enterprise\n* Bedrijfskern\n* Express\n* Standaard\n* Web"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edition \n* Schrijven\n* Enterprise\n* Bedrijfs kern\n* Express\n* Verre\n* Internet"
