--- a/lifecycle-data/products/virtual-pc-2004.yml
+++ b/lifecycle-data/products/virtual-pc-2004.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtuele pc 2004
-  description: Virtual PC 2004 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 869a0829186bfc00b527cb9196a97356020ea033
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Virtuele PC 2004
+  description: Virtual PC 2004 volgt het vaste levenscyclus beleid.
+  ms.date: 08/12/2020
+  ms.openlocfilehash: e4a1b7e6f5b072185d8b2f406398cb077ce983a6
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812285"
-name: Virtuele pc 2004
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893271"
+name: Virtuele PC 2004
 summary: >
-  Virtual PC 2004 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Virtual PC 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Express, Standard
+  Dit geldt voor de volgende edities: Express, standaard
 
 
   > [!IMPORTANT]
@@ -34,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 01/20/2004
   endDate: 10/09/2007
-content: "> [!TIP]\n> Microsoft Virtual PC 2004 Express uitgebracht op 13 april 2006.\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Express\n* Standaard"
+content: "> [!TIP]\n> Microsoft Virtual PC 2004 Express uitgebracht op 13 april 2006.\n\n## <a name=\"links\"></a>Verbindingen \n* [Beleid voor het service pakket](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edition \n* Express\n* Verre"
